--- a/css/global.css
+++ b/css/global.css
@@ -121,6 +121,14 @@ main {
     padding: 80px 20px 20px 20px;
 }
 
+@media (max-width: 768px) {
+    main {
+        display: block;
+        min-height: auto;
+        padding: 60px 20px 120px 20px;
+    }
+}
+
 @media (min-width: 768px) {
     main {
         justify-content: center;
